# gtksourcecompletion

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  authors.txt  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  gtksourcecompletion-1.0.pc  gtksourcecompletion-1.0.pc.in  gtksourcecompletion-2.0.pc.in  gtksourcecompletion-3.0.pc.in  gtksourcecompletion.1  gtksourcecompletion.c  gtksourcecompletion.lsm  gtksourcecompletion.lsm.in  gtksourcecompletion.spec  gtksourcecompletion.spec.in  gtksourcecompletion.texinfo  ignore.list  libtool  system.h  traerDeGtkSourceView.sh  xmalloc.c
debian/: README.Debian  changelog  control  control.in  copyright  libgtksourcecompletion1.0-dev.install  rules
docs/reference/: Makefile.am  gtksourcecompletion-1.0-sections.txt  gtksourcecompletion-1.0.types  gtksourcecompletion-2.0-sections.txt  gtksourcecompletion-2.0.types  gtksourcecompletion-docs.sgml
docs/reference/tmpl/: gsc-documentwords-provider.sgml  gtksourcecompletion-events.sgml  gtksourcecompletion-provider.sgml  gtksourcecompletion-utils.sgml  gtksourcecompletion.sgml
gtksourcecompletion/: Makefile  Makefile.am  Makefile.in  gsc-autocompletion-trigger.c  gsc-autocompletion-trigger.h  gsc-completion-priv.h  gsc-completion.c  gsc-completion.h  gsc-context.c  gsc-context.h  gsc-customkey-trigger.c  gsc-customkey-trigger.h  gsc-documentwords-provider.c  gsc-documentwords-provider.h  gsc-info.c  gsc-info.h  gsc-item.c  gsc-item.h  gsc-manager.c  gsc-manager.h  gsc-marshal.c  gsc-marshal.h  gsc-marshal.list  gsc-model.c  gsc-model.h  gsc-popup-priv.h  gsc-popup.c  gsc-popup.h  gsc-proposal.c  gsc-proposal.h  gsc-provider-file.c  gsc-provider-file.h  gsc-provider.c  gsc-provider.h  gsc-tree.c  gsc-tree.h  gsc-trigger-autowords.c  gsc-trigger-autowords.h  gsc-trigger-customkey.c  gsc-trigger-customkey.h  (+58 more)
m4/: ChangeLog
pixmaps/: Makefile.am
po/: ChangeLog  Makefile.in  POTFILES.in  POTFILES.skip  es.po  fr.po  it.po  missing
test/: Makefile.am  completion-custom-widgets.c  completion-demo.c  completion-focus.c  completion-simple.c  gio-test.c  gsc-documentwords-provider.c  gsc-documentwords-provider.h  gsc-provider-devhelp.c  gsc-provider-devhelp.h  gsc-provider-file.c  gsc-provider-file.h  gsc-provider-test.c  gsc-provider-test.h  gsc-provider-words.c  gsc-provider-words.h  gsc-trigger-dotexample.c  gsc-trigger-dotexample.h
tools/: generate-proposal.py  generate-provider.py  generate-trigger.py  preprocessor.py
tools/plugin_template/: proposal-template.c  proposal-template.h  provider-template.c  provider-template.h  trigger-template.c  trigger-template.h
web/: generate_web.sh  gscweb.ini  upload_sf.sh
web/input/: development.txt  documentation.txt  download.txt  features.txt  index.txt  links.txt  news.txt  styles.css  template.txt
web/input/images/: index.txt
